--- a/books/heroku.yml
+++ b/books/heroku.yml
@@ -4,7 +4,7 @@ setup:
 build:
   docker:
     web: Dockerfile
-    worker: Dockerfile
+    worker: worker/Dockerfile
 release:
   image: web
   command:
